arlex-derive/tests/cases/accounts_has_one_not_found.stderr
error: has_one target not found
 --> tests/cases/accounts_has_one_not_found.rs:5:25
  |
5 |     #[account(has_one = ghost)]
  |                         ^^^^^
